--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,12 @@ a[href].active {
 .pointer {
     cursor: pointer;
 }
+
+.form-check-input:checked {
+    background-color: #000;
+    border-color: #000;
+}
+
+.form-check-input:focus {
+    box-shadow: 0 0 0 .25rem rgba(0, 0, 0, .25);
+}
