--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,16 @@ a[href].active {
 .form-check-input:focus {
     box-shadow: 0 0 0 .25rem rgba(0, 0, 0, .25);
 }
+
+.user__vote {
+    position: relative;
+    background-color: aliceblue;
+    padding: 5px 0;
+}
+
+.user__vote::after {
+    content: '√';
+    position: absolute;
+    right: 0;
+    top: 0px;
+}
